samples/OK/return5.php
<?php
declare(strict_types=1);
function foo() : string
{
    return "hi";
}
return(foo());
